--- a/travel/index.css
+++ b/travel/index.css
@@ -2,16 +2,6 @@ body{
     margin:0%;
     padding: 0%;
     width:100%;
-    /*min-height:100vh;
-    display:flex;
-    justify-content:center;
-    flex-direction:column;
-    background:-webkit-linear-gradient(40deg,#4776e6,#8e54e9);
-    background-size:130% 130%;
-    -webkit-animation: Gradient 100s ease infinite;
-    -moz-animation: Gradient 100s ease infinite;
-    -o-animation: Gradient 100s ease infinite;
-    animation: Gradient 100s ease infinite;*/
     background:white;
     color:#282828;
     max-height: 100vh;
@@ -90,7 +80,7 @@ body{
     }
     .destination:hover{
         transform: scale(1.02);
-        box-shadow:0px 10px 30px #807c7c;
+        box-shadow:0px 10px 30px #c2bfbf;
         cursor: pointer;
     }
     #title{
