--- a/index.css
+++ b/index.css
@@ -1,183 +1,309 @@
 body{
-margin:0;
-padding:10px 0px;
-max-width:100%;
-overflow-x:hidden;
+margin:0%;
+padding: 0%;
+width:100%;
 min-height:100vh;
-font-family: 'Montserrat', sans-serif;
-font-weight:bold;
-font-style:normal;
-background:#fff;
-z-index:-1;
+display:flex;
+justify-content:center;
+flex-direction:column;
+background:-webkit-linear-gradient(0deg,#f857a6,#ff5858,#e8175d);
+background-size:500% 500%;
+-webkit-animation: Gradient 100s ease infinite;
+-moz-animation: Gradient 100s ease infinite;
+-o-animation: Gradient 100s ease infinite;
+animation: Gradient 100s ease infinite;
+font-family: 'Varela Round', sans-serif;
+color:#282828;
+max-height: 100vh;
+max-width: 100vw;
+overflow: hidden;
+align-items:center;
+}
+#center-div{
+width:90vw;
+height:88vh;
+background:rgba(255,255,255);
+border-radius:8px;
+z-index:1;
+max-height:88vh;
+overflow-y:scroll;
+transition:0.4s ease-in-out;
+}
+#inner-div{
+padding:8vh 5vw;
+text-align:left;
+transition:0.4s ease-in-out;
 }
 #header{
-font-size:42px;
-margin:20px 0px;
+width:100%;
 }
-#content{
+#header-links{
+float:right;
+position:relative;
+margin-top:20px;
+}
+#header-links a{
+color:#282828;
+font-weight:bolder;
+font-size:18px;
+margin:0px 20px;
+text-decoration:none;
+display:inline-block;
+padding:0px 5px;
+}
+#header-links a:after{
+display:block;
+content: '';
+border-bottom: solid 3px #282828;  
+transform: scaleX(0);  
+transition:transform 250ms ease-in-out;
+}
+#header-links a:hover:after{ 
+transform: scaleX(1);
+}
+#what-dude{
+width:100%;
+height:45vh;
+background:white;
+margin-top:70px;
+display:flex;
+justify-content:center;
+flex-direction:column;
+text-align:left;
+padding:5% 0%;
+font-size:45px;
+font-weight:bold;
+transition:0.4s ease-in-out;
+margin:10px 0px;
+text-align:center;
+}
+#what-dude div{
+width:65%;
+}
+#what-second-div{
+text-align:center;
+}
+#what-second-div a{
+color:#282828;
+}
+.what-second-div{
+font-size:24px;
+margin-left:30px;
+margin-right:30px;
+background:white;
+padding:0;
+border-radius:50%;
+border:15px solid white;
+transition:0.4s ease-in-out;
+}
+.what-second-div:hover{
+box-shadow:0px 10px 20px #949191;
+cursor:pointer;
+}
+#about{
+width:92%;
+height:auto;
+background:white;
+padding:30px 4%;
+font-weight:bold;
+}
+#about p{
+font-size:50px;
+background:-webkit-linear-gradient(0deg,#f857a6,#ff5858,#e8175d);
+-webkit-background-clip:text;
+background-clip:text;
+-webkit-text-fill-color: transparent;
+background-size:500% 500% !important;
+-webkit-animation: Gradient 100s ease infinite;
+-moz-animation: Gradient 100s ease infinite;
+-o-animation: Gradient 100s ease infinite;
+animation: Gradient 100s ease infinite;
+}
+#projects p{
+font-weight:bold;
+font-size:50px;
+margin-top:5%;
+padding-left:4%;
+background:-webkit-linear-gradient(0deg,#f857a6,#ff5858,#e8175d);
+-webkit-background-clip:text;
+background-clip:text;
+-webkit-text-fill-color: transparent;
+background-size:500% 500% !important;
+-webkit-animation: Gradient 100s ease infinite;
+-moz-animation: Gradient 100s ease infinite;
+-o-animation: Gradient 100s ease infinite;
+animation: Gradient 100s ease infinite;
+}
+#about-sub{
+font-size:24px;
+}
+#typehere span{
+background:-webkit-linear-gradient(0deg,#f857a6,#ff5858,#e8175d);
+-webkit-background-clip:text;
+background-clip:text;
+-webkit-text-fill-color: transparent;
+background-size:500% 500% !important;
+-webkit-animation: Gradient 100s ease infinite;
+-moz-animation: Gradient 100s ease infinite;
+-o-animation: Gradient 100s ease infinite;
+animation: Gradient 100s ease infinite;
+}
+#about span{
+background:-webkit-linear-gradient(0deg,#f857a6,#ff5858,#e8175d);
+-webkit-background-clip:text;
+background-clip:text;
+-webkit-text-fill-color: transparent;
+background-size:500% 500% !important;
+-webkit-animation: Gradient 100s ease infinite;
+-moz-animation: Gradient 100s ease infinite;
+-o-animation: Gradient 100s ease infinite;
+animation: Gradient 100s ease infinite;
+}
+#projects{
+width:100%;
+height:auto;
+background:white;
+padding:30px 0px;
+}
+.project-content{
+width:80%;
+text-align:left;
+padding:20px 0px;
+font-weight:bold;
+}
+.project-content #p-name{
+font-size:60px;
+margin:20px 0px;
+background:-webkit-linear-gradient(0deg,#f857a6,#ff5858,#e8175d);
+-webkit-background-clip:text;
+background-clip:text;
+-webkit-text-fill-color: transparent;
+background-size:500% 500% !important;
+-webkit-animation: Gradient 100s ease infinite;
+-moz-animation: Gradient 100s ease infinite;
+-o-animation: Gradient 100s ease infinite;
+animation: Gradient 100s ease infinite;
+}
+#p-desc{
 margin:20px 0px;
 font-size:30px;
+}
+h3 a{
+color:#282828;
+}
+.project-content button{
+background:transparent;
+padding:8px 60px;
+border-radius:50px;
+font-family: 'Varela Round', sans-serif;
+color:#282828;
+font-size:20px;
+font-weight:bold;
+transition:0.4s ease-in-out;
+box-shadow:0px 8px 10px #949191;
+border:0px;
+}
+.project-content button:hover{
+box-shadow:0px 15px 30px #535353;
+cursor: pointer;
+}
+.right-arrow{
+font-size:18px;
+margin-left:2px;
+}
+@media (max-width: 600px) {
+#center-div{
+width:100vw;
+height:100vh;
+background:#fff;
+border-radius:5px;
+z-index:1;
+}
+#inner-div{
+padding:3vh 6vw;
+text-align:left;
+transition:0.4s ease-in-out;
+}
+#header-links a{
+color:#282828;
+font-weight:bolder;
+font-size:18px;
+margin:0px 20px;
+text-decoration:none;
+display:none;
+padding:0px 5px;
+}
+#what-dude{
+width:95%;
+height:35vh;
+background:white;
+margin-top:22vh;
+display:flex;
+justify-content:center;
+flex-direction:column;
+text-align:left;
+padding:5% 0%;
+font-size:40px;
+font-weight:bold;
+transition:0.4s ease-in-out;
+}
+#what-dude div{
 width:90%;
+text-align:left;
 }
-#content b{
-color:#5E56F6;
-font-size:35px;
-}
-#image{
-height:160px;
-width:160px;
+.what-second-div{
+font-size:25px;
+margin-right:20px;
+margin-left:10px;
+background:white;
+padding:0;
 border-radius:50%;
+border:10px solid white;
+transition:0.4s ease-in-out;
+margin-top:14vh;
+}
+#what-second-div{
+text-align:center;
+}
 }
 ::selection {
 color:#fff; 
-background:#000;
+background:#282828;
 }
-#social{
-margin:20px 0;
-color:#000;
+@-webkit-keyframes Gradient {
+0% {background-position: 0% 50%}
+50% {background-position: 100% 50%}
+100% {background-position: 0% 50%}
 }
-.class{
-color:#000;
-font-size:35px;
-margin:0px 20px;
+@-moz-keyframes Gradient {
+0% {background-position: 0% 50%}
+50% {background-position: 100% 50%}
+100% {background-position: 0% 50%}
 }
-#hahayes{
-position:absolute;
-font-size:24px;
-padding-top:13px;
-margin-left:10px;
-float:left; 
+@keyframes Gradient {
+0% {background-position: 0% 50%}
+50% {background-position: 100% 50%}
+100% {background-position: 0% 50%}
 }
-#menu{
-width:100%;
-height:100vh;
-overflow:hidden;
-font-family: 'Montserrat', sans-serif;
-font-weight:bold;
-background:#5E56F6;
-color:white;
-z-index:1;
-position:fixed;
-display:none;
-margin-top:-20px;
-font-size:30px;
+::-webkit-scrollbar {
+    width:5px;
+    height:5px;
 }
-#options{
-margin:30px 20px; 
-color:white;
+::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+    border-radius:5px;
 }
-#options a{
-text-decoration:none;
-color:white;
+::-webkit-scrollbar-thumb {
+    background: #282828; 
+    border-radius:5px;
 }
-.project1{
-max-width:85%;
-width:85%;
-height:auto;
-overflow:hidden;
-color:white;
-background:#5E56F6;
-background-attachment:fixed;
+::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+}
+table tr td{
+display:block;
+margin:10px 0px;
+}
+table{
 margin:20px 0px;
-border-radius:10px;
-display:inline-block;
-font-size:60px;
-padding:20px;
-text-align:left;
-font-family: 'Montserrat', sans-serif;
-font-weight:bold;
-font-style:normal;
-}
-.project1 p{
-font-size:30px;
-}
-.project1 a{
-padding:8px 60px;
-border:2px solid #fff;
-color:#5E56F6;
-font-size:22px;
-background:#fff;
-border-radius:25px;
-text-decoration:none;	
-font-family: 'Montserrat', sans-serif;
-font-weight:bold;
-font-style:normal;
-position:relative;
-}
-#particles-js{
-width:98%;
-height:84%;
-position:absolute;
-margin-top:-20px;
-margin-left:-20px;
-}
-@media (min-width: 600px) {
-body{
-margin:0;
-padding:30px 0px;
-max-width:100%;
-overflow-x:hidden;
-min-height:100vh;
-font-family:'Montserrat', sans-serif;
-font-weight:bold;
-font-style:normal;
-background:#fff;
-}
-#header{
-font-size:50px;
-margin:20px 0px;
-}
-#content{
-margin:20px 0px;
-font-size:32px;
-width:90%;
-}
-#content b{
-color:#5E56F6;
-font-size:36px;
-}
-#hahayes{
-position:absolute;
-padding-top:6px;
-font-size:34px;
-margin-left:16px;
-float:left; 
-}
-#menu{
-width:100%;
-height:100vh;
-overflow:hidden;
-font-family: 'Montserrat', sans-serif;
-font-weight:bold;
-background:#5E56F6;
-color:white;
-z-index:1;
-position:fixed;
-display:none;
-margin-top:-30px;
-}
-.project1{
-max-width:400px;
-width:400px;
-height:auto;
-overflow:hidden;
-color:white;
-background:#5E56F6;
-background-attachment:fixed;
-margin:30px;
-border-radius:10px;
-text-align:center;
-font-family: 'Montserrat', sans-serif;
-font-weight:bold;
-font-style:normal;
-font-size:60px;
-padding:30px;
-}
-#particles-js{
-width:400px;
-height:400px;
-position:absolute;
-margin-top:-20px;
-margin-left:-20px;
-}
 }
