--- a/meteo/index.css
+++ b/meteo/index.css
@@ -1,53 +1,57 @@
 @font-face {
 	font-family: weathericons;
 	src: url(font/weathericons-regular-webfont.woff);
-	}
-	body {
-	margin: 0%;
-	padding: 0%;
-	width: 100%;
-	background: white;
-	color: #282828;
-	max-height: 100vh;
-	max-width: 100vw;
-	overflow-x:hidden;
-	align-items: center;
-	overflow-y:scroll;
 }
 
-#loading{
-width:100%;
-position:fixed;
-top:0;
-bottom:0;
-background:white;
-z-index:9999;
-display: flex;
-justify-content: center;
-flex-direction: column;
-align-items: center;
+body {
+	margin: 0%;
+	padding: 0%;
+	width: 100vw;
+	color: #282828;
+	max-width: 100vw;
+	overflow-x: hidden;
+	align-items: center;
 }
-#spinner{
-	animation:rotate 1s infinite linear;
-	width:60px;
-	height:60px;
-	border:14px solid #282828;
-	border-bottom:14px solid white;
-	border-radius:100px;
-	margin:0;
+
+#loading {
+	width: 100%;
+	height: 100vh;
+	position: fixed;
+	background: white;
+	z-index: 9999;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+}
+
+#spinner {
+	animation: rotate 1s infinite linear;
+	width: 60px;
+	height: 60px;
+	border: 14px solid #282828;
+	border-bottom: 14px solid white;
+	border-radius: 100px;
+	margin: 0;
+}
+
+@keyframes rotate {
+	0% {
+		transform: rotate(0deg);
 	}
-	@keyframes rotate{
-	0%{transform: rotate(0deg);}
-	100%{transform: rotate(360deg);}
-	}	
+	100% {
+		transform: rotate(360deg);
+	}
+}
+
 #header {
 	width: 90%;
-	padding:4% 5%;
+	padding: 4% 5%;
 	color: #282828;
-	top:0;
-	z-index:9;
-	background:#fff;
-	transition:0.8s ease-in-out;
+	top: 0;
+	z-index: 9;
+	background: #fff;
+	transition: 0.8s ease-in-out;
 }
 
 #logo {
@@ -55,27 +59,29 @@ align-items: center;
 	font-family: 'Varela Round', sans-serif;
 	font-weight: bold;
 }
-.logo-animation{
+
+.logo-animation {
 	background-image: linear-gradient(-225deg, #231557 0%, #44107A 29%, #FF1361 67%, #FFF800 100%);
-    -webkit-background-clip:text;
-    background-clip:text;
+	-webkit-background-clip: text;
+	background-clip: text;
 	-webkit-text-fill-color: transparent;
-	background-size:500% 500% !important;
+	background-size: 500% 500% !important;
 	-webkit-animation: Gradient 100s ease infinite;
 	-moz-animation: Gradient 100s ease infinite;
 	-o-animation: Gradient 100s ease infinite;
 	animation: Gradient 100s ease infinite;
 }
+
 #header div {
 	display: inline-block;
 }
 
 #links {
-	float:right;
+	float: right;
 	font-family: 'Varela Round', sans-serif;
 	font-weight: bold;
-	position:relative;
-	top:16px;
+	position: relative;
+	top: 16px;
 }
 
 #links a {
@@ -84,14 +90,14 @@ align-items: center;
 	text-decoration: none;
 	color: #282828;
 }
-#links a:hover{
-cursor: pointer;
+
+#links a:hover {
+	cursor: pointer;
 }
 
 #back {
 	width: 100%;
-	top: 0;
-	bottom: 0;
+	height: 100vh;
 	background: rgba(0, 0, 0, 0.6);
 	position: fixed;
 	z-index: 99;
@@ -156,8 +162,8 @@ cursor: pointer;
 	align-content: center;
 }
 
-#results a{
-text-decoration:none !important;
+#results a {
+	text-decoration: none !important;
 }
 
 #results div {
@@ -169,7 +175,7 @@ text-decoration:none !important;
 	padding: 15px;
 	transition: 0.4s ease-in-out;
 	border-radius: 5px;
-	color:#282828;
+	color: #282828;
 }
 
 #results div:hover {
@@ -178,150 +184,166 @@ text-decoration:none !important;
 }
 
 #content {
-	width:100%;
-	height:100vh;
-	filter:none;
-	transform:scale(1.01);
+	width: 100%;
+	height: auto;
+	filter: none;
+	transform: scale(1.01);
 }
 
 #realWeather {
-	width:100%;
-	height:auto;
-	padding:50px 0px !important;
+	width: 100%;
+	height: auto;
+	padding: 50px 0px !important;
 	justify-content: center;
 	align-items: center;
 	display: flex;
-    flex-direction: row;
+	flex-direction: row;
 	flex-wrap: wrap;
 }
-.wh-animation{
+
+.wh-animation {
 	background-image: linear-gradient(-225deg, #231557 0%, #44107A 29%, #FF1361 67%, #FFF800 100%);
-	background-size:500% 500% !important;
-    -webkit-animation: Gradient 100s ease infinite;
-    -moz-animation: Gradient 100s ease infinite;
-    -o-animation: Gradient 100s ease infinite;
-    animation: Gradient 100s ease infinite;
-}
-#error1{
-width:90%;
-}
-#error2{
-	width:90%;
-	}
-
-#error1 p{
-font-size:50px;
-font-family: 'Varela Round', sans-serif;
-font-weight: bold;
-color:#282828;
-padding:18vh 0px;
-display:block;
-width:80%;
+	background-size: 500% 500% !important;
+	-webkit-animation: Gradient 100s ease infinite;
+	-moz-animation: Gradient 100s ease infinite;
+	-o-animation: Gradient 100s ease infinite;
+	animation: Gradient 100s ease infinite;
 }
 
-#error2 p{
-	font-size:50px;
+#error1 {
+	width: 90%;
+}
+
+#error2 {
+	width: 90%;
+}
+
+#error1 p {
+	font-size: 50px;
 	font-family: 'Varela Round', sans-serif;
 	font-weight: bold;
-	color:#282828;
-	padding:18vh 0px;
-	display:block;
-	width:80%;
-	}
-	
+	color: #282828;
+	padding: 18vh 0px;
+	padding-bottom: 0px !important;
+	display: block;
+	width: 80%;
+}
 
-#emoji{
-width:94%;
-display:block;
-position: absolute;
-right:0;
-left:0;
-top:0;
-text-align:right;
-padding:2.8% 0px;
-font-size:40px;
-margin-top:-5%;
+#error2 p {
+	font-size: 50px;
+	font-family: 'Varela Round', sans-serif;
+	font-weight: bold;
+	color: #282828;
+	padding: 18vh 0px;
+	padding-bottom: 0px !important;
+	padding-bottom: 0px !important;
+	display: block;
+	width: 80%;
+}
+
+#emoji {
+	width: 94%;
+	display: block;
+	position: absolute;
+	right: 0;
+	left: 0;
+	top: 0;
+	text-align: right;
+	padding: 2.8% 0px;
+	font-size: 40px;
+	margin-top: -5%;
 }
 
 #data {
-width:80%;
-text-align:center;
-font-family: 'Varela Round', sans-serif;
-font-weight: bold;
-color:white;
+	width: 80%;
+	text-align: center;
+	font-family: 'Varela Round', sans-serif;
+	font-weight: bold;
+	color: white;
 }
 
-#data1{
-float:left;
-font-size:16px;
-text-align:left;
+#data1 {
+	float: left;
+	font-size: 16px;
+	text-align: left;
 }
 
-#data2{
-float:right;
-text-align:right;
-margin-top:7%;
+#data2 {
+	float: right;
+	text-align: right;
+	margin-top: 7%;
 }
 
-#cloud{
-font-size:80px;
-margin:5px 0px;
+#cloud {
+	font-size: 80px;
+	margin: 5px 0px;
 }
 
-#sun{
-font-size:30px;
-margin:5px 15px;
-bottom:-5px;
-position:relative;
+#sun {
+	font-size: 30px;
+	margin: 5px 15px;
+	bottom: -5px;
+	position: relative;
 }
-#c{
-margin:0px 15px;
+
+#c {
+	margin: 0px 15px;
 }
-#status{
-font-size:40px;
-margin:10px 0px;
+
+#status {
+	font-size: 40px;
+	margin: 10px 0px;
 }
 
 #inner {
-width:80%;
-height:100%;
-background:white;
+	width: 80%;
+	height: 100%;
+	background: white;
 }
 
-#forecast{
-width:92%;
-height:35vh;
-margin-top:4vh;
-margin-bottom:3vh;
-font-family: 'Varela Round', sans-serif;
-font-weight: bold;
-color:#fff;
+#forecast {
+	width: 92%;
+	height: 35vh;
+	margin-top: 4vh;
+	margin-bottom: 3vh;
+	font-family: 'Varela Round', sans-serif;
+	font-weight: bold;
+	color: #fff;
 }
 
-.card{
-width:14%;
-height:22vh;
-background:white;
-margin:0px 15px;
-display:inline-block;
-font-family: 'Varela Round', sans-serif;
-font-weight: bold;
-color:#282828;
-font-size:24px;
-padding:20px 0px;
-padding-top:30px;
-border-radius:10px;
-transition:0.4s ease-in-out;
+#made {
+	position: absolute;
+	width: 100%;
+	text-align: center;
+	padding-top: 11vh;
+	font-family: 'Varela Round', sans-serif;
+	font-weight: bold;
 }
 
-#cast{
-font-size:60px !important;
-padding:30px 0px;
-padding-bottom:20px;
+.card {
+	width: 14%;
+	height: 22vh;
+	background: white;
+	margin: 0px 15px;
+	display: inline-block;
+	font-family: 'Varela Round', sans-serif;
+	font-weight: bold;
+	color: #282828;
+	font-size: 24px;
+	padding: 20px 0px;
+	padding-top: 30px;
+	border-radius: 10px;
+	transition: 0.4s ease-in-out;
 }
 
-.card:hover{
-transform:scale(1.1);
+#cast {
+	font-size: 60px !important;
+	padding: 30px 0px;
+	padding-bottom: 20px;
+}
+
+.card:hover {
+	transform: scale(1.1);
 }
 
 *:focus {
